--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -21,7 +21,7 @@
     float:left;
     position: relative;
     width: 32%;
-    padding-bottom : 32%; /* = width for a 1:1 aspect ratio */
+    padding-bottom : 42%; /* = width for a 1:1 aspect ratio */
     margin:0.66%;
     background-color:#1E1E1E;
     overflow:hidden;
@@ -113,4 +113,43 @@
 
 .button-pair {
   background:#fff;
+}
+
+
+.icon-plus {
+background-color: #333;
+border-radius:24px;
+-webkit-border-radius:24px;
+-moz-border-radius:24px;
+width: 42px;
+height: 42px;
+position: relative;
+top: 50%;
+    left: 50%;
+    margin-left: -16px;
+    margin-top: -16px;
+}
+.icon-plus:after {
+background-color: #fff;
+width: 24px;
+height: 6px;
+border-radius: 1px;
+-webkit-border-radius: 1px;
+-moz-border-radius: 1px;
+position: absolute;
+top: 19px;
+    left: 9px;
+  content:"";
+}
+.icon-plus:before {
+background-color: #fff;
+width: 6px;
+height: 24px;
+border-radius: 1px;
+-webkit-border-radius: 1px;
+-moz-border-radius: 1px;
+position: absolute;
+top:10px;
+left: 18px;
+  content:"";
 }
