--- a/src/main/resources/static/views/upload.html
+++ b/src/main/resources/static/views/upload.html
@@ -1,12 +1,12 @@
  
 <div class="sticky sticky--header">
-  <div class="title-bar title-bar--border">
+  <div class="title-bar title-bar--border bg--wh">
     <div class="title-bar__action-area title-bar__action-area--left">
             <button class="title-bar__button title-bar__button--left button button--flat">
              <i class="title-bar__button-icon title-bar__button-icon--left button__icon i i--caret-left "></i>
             </button>
     </div>
-    <h1 class="title-bar__title">Gift Card</h1>
+    <h1 class="title-bar__title">Product Page</h1>
 
   </div>
 </div>
@@ -14,13 +14,8 @@
     
   <div class="gallery clearfix">
     <div class="square">
-      <div class="square__content">
-        <img class="square__img" src="https://cdn1.raywenderlich.com/wp-content/uploads/2012/06/InstagramTutorial2.png">
-        <div class="square__votes">
-          <div class="square__yes">
-            <div class="heart-container"><i class="heart"></i></div>
-            <div class="percent">55%</div>
-          </div>
+      <div class="square__content bg--g3">
+        <div class="icon icon-plus"><span class="name"></span>
         </div>
       </div>
     </div>
@@ -217,7 +212,3 @@
     </div>
   </div>
    </div>
-<div class="button-pair sticky sticky--footer">
-<button class="button-pair__button button button--primary">Take Photo</button>
-<button class="button-pair__button button button--secondary">Upload</button>
-</div>
