natalie scan page and header icon

--- a/src/main/resources/static/views/scan.html
+++ b/src/main/resources/static/views/scan.html
@@ -1,1 +1,25 @@
-<p>This is the scan view.</p>
+
+
+<div class="">
+  <div class="title-bar title-bar--border bg--wh">
+   
+    <h1 class="title-bar__title">Scan Page</h1>
+ <div class="title-bar__action-area title-bar__action-area--right">
+            <a class="title-bar__button title-bar__button--left button button--flat" href="/scan">
+             <i class="title-bar__button-icon title-bar__button-icon--right button__icon i i--time "></i>
+            </a>
+    </div>
+  </div>
+</div>
+<div class="padder--m">
+	<div class="form-field">
+    <input type="text" class="form-field__input" id="input_1" value=""/>
+    <label class="form-field__label" for="input_1">ISBN</label>
+</div>
+
+<div class="i i--scan-big i--b1" style="margin: 0 auto; text-align:center; font-size:50px"></div>
+</div>
+
+
+
+
