--- a/src/main/resources/static/views/upload.html
+++ b/src/main/resources/static/views/upload.html
@@ -2,19 +2,21 @@
 <div class="sticky sticky--header">
   <div class="title-bar title-bar--border bg--wh">
     <div class="title-bar__action-area title-bar__action-area--left">
-            <button class="title-bar__button title-bar__button--left button button--flat">
+            <a class="title-bar__button title-bar__button--left button button--flat" href="/scan">
              <i class="title-bar__button-icon title-bar__button-icon--left button__icon i i--caret-left "></i>
-            </button>
+            </a>
     </div>
     <h1 class="title-bar__title">Product Page</h1>
-
+ <a class="title-bar__button title-bar__button--left button button--flat" href="/scan">
+             <i class="title-bar__button-icon title-bar__button-icon--right button__icon i i--time "></i>
+            </a>
   </div>
 </div>
   <div class="body">
     
   <div class="gallery clearfix">
     <div class="square">
-      <div class="square__content bg--g3">
+      <div class="square__content bg--g3" style="cursor:pointer">
         <div class="icon icon-plus"><span class="name"></span>
         </div>
       </div>
