--- a/src/main/resources/static/views/upload.html
+++ b/src/main/resources/static/views/upload.html
@@ -2,14 +2,16 @@
 <div class="sticky sticky--header">
   <div class="title-bar title-bar--border bg--wh">
     <div class="title-bar__action-area title-bar__action-area--left">
-            <a class="title-bar__button title-bar__button--left button button--flat" href="/scan">
+            <a class="title-bar__button title-bar__button--left button button--flat" href="/#/scan">
              <i class="title-bar__button-icon title-bar__button-icon--left button__icon i i--caret-left "></i>
             </a>
     </div>
     <h1 class="title-bar__title">Product Page</h1>
- <a class="title-bar__button title-bar__button--left button button--flat" href="/scan">
+  <div class="title-bar__action-area title-bar__action-area--right">
+            <a class="title-bar__button title-bar__button--right button button--flat" href="/#/history">
              <i class="title-bar__button-icon title-bar__button-icon--right button__icon i i--time "></i>
             </a>
+    </div>
   </div>
 </div>
   <div class="body">
