--- a/src/main/resources/static/views/vote.html
+++ b/src/main/resources/static/views/vote.html
@@ -1,1 +1,14 @@
-<p>This is the vote view.</p>
+<<!DOCTYPE html>
+<html>
+<head>
+	<title>What do you think of my outfit?</title>
+	<title>Scan Page</title>
+	<link rel="stylesheet" type = "text/css" href = "styles/styleguide.css">
+	<link rel="stylesheet" type = "text/css" href = "styles/main.css">
+</head>
+<body>
+	<img src="images\433sf.jpg" class="img-thumbnail" alt="Cinque Terre" width="20%" height="20%">	
+	<input type="image" src="images\thumbs-up.png" name="thumbsup" width="20%">
+	<input type="image" src="images\thumbs-up.png" name="thumbsdown" width="20%"
+</body>
+</html>
