natalie images vote page

--- a/src/main/resources/static/views/vote.html
+++ b/src/main/resources/static/views/vote.html
@@ -8,7 +8,10 @@
 </head>
 <body>
 	<img src="images\433sf.jpg" class="img-thumbnail" alt="Cinque Terre" width="20%" height="20%">	
-	<input type="image" src="images\thumbs-up.png" name="thumbsup" width="20%">
-	<input type="image" src="images\thumbs-up.png" name="thumbsdown" width="20%"
+
+	<div style="margin:0 auto;">
+	<a style="display:inline-block"><img src="images\thumbs-up.png" name="thumbsup" /></a>
+	<a style="display:inline-block"><img src="images\thumbs-down.png" name="thumbsdown" /></a>
+	<div>
 </body>
 </html>
