natalie vote thumbs up, buttons and header

--- a/src/main/resources/static/views/vote.html
+++ b/src/main/resources/static/views/vote.html
@@ -1,17 +1,25 @@
-<<!DOCTYPE html>
-<html>
-<head>
-	<title>What do you think of my outfit?</title>
-	<title>Scan Page</title>
-	<link rel="stylesheet" type = "text/css" href = "styles/styleguide.css">
-	<link rel="stylesheet" type = "text/css" href = "styles/main.css">
-</head>
-<body>
-	<img src="images\433sf.jpg" class="img-thumbnail" alt="Cinque Terre" width="20%" height="20%">	
+<div class="sticky sticky--header">
+  <div class="title-bar title-bar--border bg--wh">
+    <div class="title-bar__action-area title-bar__action-area--left">
+            <a class="title-bar__button title-bar__button--left button button--flat" href="/#/scan">
+             <i class="title-bar__button-icon title-bar__button-icon--left button__icon i i--caret-left "></i>
+            </a>
+    </div>
+    <h1 class="title-bar__title">Buy/Don't Buy</h1>
+  <div class="title-bar__action-area title-bar__action-area--right">
+            <a class="title-bar__button title-bar__button--right button button--flat" href="/#/history">
+             <i class="title-bar__button-icon title-bar__button-icon--right button__icon i i--time "></i>
+            </a>
+    </div>
+  </div>
+</div>
 
-	<div style="margin:0 auto;">
-	<a style="display:inline-block"><img src="images\thumbs-up.png" name="thumbsup" /></a>
-	<a style="display:inline-block"><img src="images\thumbs-down.png" name="thumbsdown" /></a>
-	<div>
-</body>
-</html>
+<div style="padding-top:44px; padding-bottom:66px;">
+	<img src="images\433sf.jpg" class="img-thumbnail" alt="Cinque Terre" width="20%" height="20%">	
+<div>
+
+<div class="button-pair sticky sticky--footer">
+<button class="button-pair__button button button--primary" style="height: 66px; padding-top: 15px;"><img width="30px" src="..\images\thumbs-up.png"  /></button>
+<button class="button-pair__button button button--secondary" style="height: 66px; padding-top: 15px;"><img width="30px" src="..\images\thumbs-down.png" /></button>
+</div>
+
